--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section class="main-content flex-col">
         <div class="text-content">
             <p>Oblivion wurde 2006 unter dem Namen "Symphony" auf dem Server Anub'arak gegründet.
-               Wir sind somit eine der ältesten deutschen World of Warcraft-Gilden.</p>
+            <br>Wir sind somit eine der ältesten deutschen World of Warcraft-Gilden.</p>
             <p>Oberste Priorität hat bei uns effizientes Raiden <span>OHNE</span> Alt-Pflicht.
             </p>
 
