--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
                             <th>Wipes</th>
                             <th>Date</th>
                         </tr>
+                            <td colspan="4" class="tier"><strong>Amirdrassil, the Dream's Hope</strong></td>
+                        </tr>
+                        <tr>
+                            <td class="world-rank">61</td>
+                            <td>Fyrakk the Blazing</td>
+                            <td>334</td>
+                            <td>Jan 04, 2024</td>
+                            </tr>
                             <td colspan="4" class="tier"><strong>Aberrus, the Shadowed Crucible</strong></td>
                         </tr>
                         <tr>
